<resources>
    <string name="app_name">IG Downloader</string>
    <string name="paste_the_link_here">Paste the link here…</string>
    <string name="TODO">todo</string>
    <string name="search">Search</string>
    <string name="video_preview">Video Preview</string>
    <string name="download_video">Download Video</string>
    <string name="about">About</string>
    <string name="how_to_use">How to use</string>
    <string name="how_to">
        1.Copy the video URL from the instagram. \n 2.Paste the link in the search bar. \n 3.Tap on search button as soon as video loads it will show you a Preview. \n 4.Finally tap on the download button.\n\n<b>Note: All the videos will be downloaded in your internal storage inside the IGDownloader folder.</b>
    </string>
    <string name="about_description">An app which allows you to download videos and profile picture from Instagram in High quality.</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="enter_username">Enter username here…</string>
    <string name="download_photo">Download Photo</string>
    <string name="video_url">Instagram video detected do you want to download? </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="download">Download Video</string>
    <string name="download_1">Download</string>
    <string name="todo">TODO</string>
    <string name="picture_downloader">Picture Downloader</string>
    <string name="search_user">Search user</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_user_name">Username</string>
    <string name="search_things">Search for videos,igtv,reels.</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="bio">Biography</string>
    <string name="follower_count">Follower</string>
    <string name="following_count">Following</string>
    <string name="photo_avail_in">Photo available </string>
    <string name="photo_preview">Photo Preview</string>
    <string name="download_img_in_hd">Download profile pictures in HD quality.</string>
    <string name="photo_avilable">Photo Available in HD</string>
    <string name="open_source">View source code</string>
    <string name="app_version">App version</string>
    <string name="app_version_1">1.2(1002)</string>
    <string name="permission_is_r">Permission is required to download media. Please enable it in the settings.</string>
    <string name="permission_required">Permission Required</string>
    <string name="my_downloads">My downloads</string>
    <string name="no_img_vid_found">No images and videos found</string>
    <string name="made_by_nkl">Made by Nakul</string>
</resources>