<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/main_progress_bar"
        layout="@layout/progress_bar" />

    <EditText
        android:id="@+id/user_link"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:autofillHints="@string/TODO"
        android:textColor="@color/black"
        android:fontFamily="@font/hind"
        android:hint="@string/paste_the_link_here"
        android:inputType="text" />

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/primaryTextWhite"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/hind"
        android:drawableEnd="@drawable/ic_round_arrow_downward_24"
        android:text="@string/download_video"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/search_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="4dp"
        android:layout_weight="5"
        android:fontFamily="@font/hind"
        android:textStyle="bold"
        android:text="@string/search"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/primaryTextWhite"
        tools:ignore="ButtonStyle" />

</LinearLayout>

    <TextView
        android:id="@+id/video_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/hind"
        android:text="@string/video_preview"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/video_preview"
        android:layout_width="match_parent"
        android:layout_height="720px"
        android:layout_gravity="center"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <include
            android:id="@+id/bottom_nav_view2"
            layout="@layout/bottom_navigation" />
    </LinearLayout>


</LinearLayout>