<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hind"
            android:text="@string/user_user_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:fontFamily="@font/hind"
            android:text="@string/user_full_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/card_user_pic"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_arrow_downward" />
</androidx.cardview.widget.CardView>