<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/hind"
        android:hint="@string/enter_username"
        android:autofillHints="@string/TODO"
        android:inputType="text"/>

    <LinearLayout
        tools:targetApi="23"
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:contextClickable="true"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/TODO" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/hind"
            android:hint="@string/TODO"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/search_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/primaryTextWhite"
        android:fontFamily="@font/hind"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:text="@string/search"/>

    <ProgressBar
        android:id="@+id/progress_bar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            app:itemTextColor="@color/primaryTextWhite"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

</LinearLayout>